<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".firebase.LoginActivity">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="307dp"
            android:layout_height="226dp"
            android:layout_gravity="center"
            android:background="@drawable/momandson" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/loginHere"
            android:textColor="#ffb366"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/idLEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="25sp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp" />

        <EditText
            android:id="@+id/idLPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="25sp"
            android:layout_marginTop="30sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/idLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            android:textColor="#ffb366"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/messageAccount"
                android:textColor="#ffb366"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/idRegisterBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/registerNow"
                android:textColor="#ffb366"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>