<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerViewModel"
            type="com.example.foodsuggestions.viewmodels.RegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            tools:context=".firebase.RegisterActivity">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="307dp"
                android:layout_height="226dp"
                android:layout_gravity="center"
                android:background="@drawable/momandson" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/registerHere"
                android:textColor="#ffb366"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/idRName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="5sp"
                android:ems="10"
                android:hint="@string/fullName"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@={registerViewModel.fullName}"/>

            <EditText
                android:id="@+id/idREmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="25sp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@={registerViewModel.mail}"/>

            <EditText
                android:id="@+id/idRPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="30sp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@={registerViewModel.password}"/>

            <EditText
                android:id="@+id/idRConfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="25sp"
                android:layout_marginTop="30sp"
                android:ems="10"
                android:hint="@string/confirm"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:text="@={registerViewModel.confirmPassword}"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_button"
                android:text="@string/register"
                android:textColor="#ffb366"
                android:textSize="16sp"
                android:textStyle="bold"
                isVisible="@{!registerViewModel.loading}"
                android:onClick="@{() -> registerViewModel.userRegister()}"/>

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:visibility="gone"
                isVisible="@{registerViewModel.loading}"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/messageLogin"
                    android:textColor="#ffb366"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/idLoginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/loginNow"
                    android:textColor="#ffb366"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:onClick="@{() -> registerViewModel.navigateToLoginScreen()}"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
