<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".main.MainActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="340dp"
            android:layout_height="290dp"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:background="@drawable/girl" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:text="@string/welcome"
            android:textColor="#ffb366"
            android:textSize="29sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewJoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:text="@string/join"
            android:textColor="#ffb366"
            android:textSize="23sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/bShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="80dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/button_pressed"
            android:backgroundTint="@null"
            android:text="@string/suggestion"
            android:textAllCaps="false"
            android:textColor="#ffb366"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />

    </LinearLayout>
</ScrollView>